[package]
name = "cch23-johndoe-01"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-utils = "3.0.1"
shuttle-actix-web = "0.35.0"
shuttle-runtime = "0.35.0"
tokio = "1.26.0"
serde = "1.0.193"
serde_json = "1.0.108"
reqwest = {version = "0.11.22", features = ["json"]}
core = { path = "core" }