[package]
name = "cch23-johndoe-01"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-files = "0.6.2"
actix-multipart = "0.6.1"
actix-utils = "3.0.1"
image = "0.24.7"
shuttle-actix-web = "0.35.0"
shuttle-runtime = "0.35.0"
serde = "1.0.193"
serde_json = "1.0.108"
core = { path = "core" }
ulid = "1.1.0"
uuid = "1.6.1"
chrono = { version = "0.4.31", features = ["clock", "serde"] }