[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.193"
serde_json = "1.0.108"
data-encoding = "2.5.0"
reqwest = {version = "0.11.22", features = ["json"]}
fancy-regex = "0.12.0"